--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,6 @@
+.container {
+  margin-left: 6%;
+}
 .listContainer ul {
   background: rgb(242, 240, 255);
   background: linear-gradient(
@@ -9,6 +12,7 @@
   padding-top: 2%;
   padding-bottom: 2%;
   width: 25rem;
+  min-width: 12rem;
   margin-bottom: 5px;
   border-radius: 5px;
   box-shadow: 5px 8px 15px rgba(0, 0, 0, 0.2);
@@ -22,6 +26,7 @@
     rgba(255, 255, 255, 1) 72%
   );
   width: 100%;
+  min-width: 14rem;
   padding-top: 2%;
   padding-bottom: 2%;
   padding-left: 8%;
