--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,22 @@
+select {
+  width: 100%;
+}
+
 .container {
   margin-left: 6%;
+}
+.listContainer {
+  width: fit-content;
+  /* background: #de5a5a; */
+  display: block;
+}
+.itemContainer {
+  display: block;
+  height: fit-content;
+  width: 100%;
+  /* background: violet; */
+  padding-bottom: 1%;
+  padding-top: 1%;
 }
 .listContainer ul {
   background: rgb(242, 240, 255);
@@ -11,11 +28,17 @@
   margin-top: 5.5%;
   padding-top: 2%;
   padding-bottom: 2%;
-  width: 25rem;
+  width: 100%;
   min-width: 12rem;
   margin-bottom: 5px;
   border-radius: 5px;
   box-shadow: 5px 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.formContainer {
+  width: 100%;
+  height: 100%;
+  /* background: yellowgreen; */
 }
 
 .miForm {
@@ -25,14 +48,22 @@
     rgba(242, 240, 255, 1) 0%,
     rgba(255, 255, 255, 1) 72%
   );
-  width: 100%;
-  min-width: 14rem;
-  padding-top: 2%;
+  width: 60%;
+  padding-left: 2%;
+  padding-right: 2%;
   padding-bottom: 2%;
-  padding-left: 8%;
   margin-top: 2%;
+  margin-bottom: 2%;
   border-radius: 5px;
   box-shadow: 5px 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.selectComponents {
+  margin-bottom: 1%;
+}
+.selectComponents label {
+  margin-right: 2%;
+  margin-left: 1%;
 }
 
 .miForm .form-group {
@@ -40,9 +71,34 @@
 }
 .miForm button {
   width: 100%;
+  margin-top: 2%;
 }
 .btn-custom {
   background-color: rgb(76, 155, 93);
   font-weight: bold;
   color: rgb(255, 255, 255);
+}
+
+.marcadorLista {
+  /* background: wheat; */
+  width: 100%;
+  display: inline;
+}
+.itemData {
+  /* background: teal; */
+  display: inline;
+  width: 100%;
+}
+.itemIcons {
+  /* background: tomato; */
+  width: 100%;
+  height: 100%;
+  margin-left: 50%;
+  margin-right: 0;
+  display: inline;
+}
+.itemIcons i {
+  cursor: pointer;
+  font-size: 1rem;
+  color: #de5a5a;
 }
